--- a/.github/workflows/CI-1.yml
+++ b/.github/workflows/CI-1.yml
@@ -12,7 +12,11 @@ on:
 jobs:
   build-java:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        node-version: [ 8.x, 10.x, 12.x ]
+        os: [macos-latest, windows-latest, ubuntu-latest ]
     
     steps:
     - uses: actions/checkout@v2
