--- a/.github/workflows/CI-1.yml
+++ b/.github/workflows/CI-1.yml
@@ -4,10 +4,12 @@
 name: Java CI with Gradle
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  schedule:
+    - cron: "* * * * *"
+  # push:
+  #   branches: [ master ]
+  # pull_request:
+  #   branches: [ master ]
 
 jobs:
   build-java:
