--- a/.github/workflows/CI-1.yml
+++ b/.github/workflows/CI-1.yml
@@ -3,12 +3,12 @@
 name: Java CI with Gradle
 
 on:
-  schedule:
-    - cron: "* * * * *"
-  # push:
-  #   branches: [ master ]
-  # pull_request:
-  #   branches: [ master ]
+  # schedule:
+  #   - cron: "* * * * *"
+   push:
+    branches: [ master ]
+  # # pull_request:
+  # #   branches: [ master ]
 
 jobs:
   build-java:
